--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "eslint": "eslint . --fix-dry-run --cache",
+    "lint": "npm run prettier && npm run eslint"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,15 @@
     "globals": "^15.11.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
+    "serverless-offline": "^14.3.3",
     "ts-jest": "^29.2.5",
     "typescript-eslint": "^8.12.2"
+  },
+  "dependencies": {
+    "@aws-sdk/client-lambda": "^3.682.0",
+    "@types/aws-lambda": "^8.10.145",
+    "aws-lambda": "^1.0.7",
+    "tsyringe": "^4.8.0",
+    "uuid": "^11.0.2"
   }
 }
