--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@aws-sdk/client-lambda": "^3.682.0",
     "@types/aws-lambda": "^8.10.145",
     "aws-lambda": "^1.0.7",
+    "axios": "^1.7.7",
     "tsyringe": "^4.8.0",
     "uuid": "^11.0.2"
   }
