--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prettier": "prettier --write .",
     "eslint": "eslint . --fix-dry-run --cache",
     "lint": "npm run prettier && npm run eslint",
+    "test": "jest",
     "local": "npx serverless offline"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/jest": "^29.5.14",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
     "jest": "^29.7.0",
@@ -28,6 +30,8 @@
     "@types/aws-lambda": "^8.10.145",
     "aws-lambda": "^1.0.7",
     "axios": "^1.7.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "tsyringe": "^4.8.0",
     "uuid": "^11.0.2"
   }
