Added actual interaction with swapi people resource and added unit test.

--- a/serverless.yml
+++ b/serverless.yml
@@ -12,7 +12,7 @@ provider:
 
 functions:
   getPeople:
-    handler: src/handlers/people/getPeople.handler
+    handler: src/handlers/people/getPeople.getPeopleHandler
     events:
       - http:
           path: myswapi/{id}
