--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.682.0",
+    "@faker-js/faker": "^9.1.0",
     "@types/aws-lambda": "^8.10.145",
     "aws-lambda": "^1.0.7",
     "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
     "uuid": "^11.0.2"
   }
