--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript-eslint": "^8.12.2"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.682.0",
     "@aws-sdk/client-lambda": "^3.682.0",
     "@faker-js/faker": "^9.1.0",
     "@types/aws-lambda": "^8.10.145",
