--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "globals": "^15.11.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^14.3.3",
     "ts-jest": "^29.2.5",
     "typescript-eslint": "^8.12.2"
@@ -34,7 +35,9 @@
     "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dynamodb-toolbox": "^1.11.10",
     "reflect-metadata": "^0.2.2",
+    "serverless-dynamodb": "^0.2.54",
     "tsyringe": "^4.8.0",
     "uuid": "^11.0.2"
   }
