--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/aws-lambda": "^8.10.145",
     "aws-lambda": "^1.0.7",
     "axios": "^1.7.7",
+    "axios-mock-adapter": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dynamodb-toolbox": "^1.11.10",
