Added env fields.

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,6 @@
 SWAPI_ROOT_URL="https://test/api"
 SWAPI_PEOPLE_ENDPOINT="testingPeople"
+
+AWS_REGION="region-test"
+AWS_DYNAMO_ENDPOINT="http://localhost:8000"
+AWS_DYNAMO_CHARACTERS_TABLE="Characters"
