--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint": "eslint . --fix-dry-run --cache",
     "lint": "npm run prettier && npm run eslint",
     "test": "jest",
-    "local": "npx serverless offline",
+    "local": "serverless offline start",
     "deploy": "npx serverless deploy"
   },
   "keywords": [],
@@ -29,6 +29,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.682.0",
     "@aws-sdk/client-lambda": "^3.682.0",
+    "@aws-sdk/lib-dynamodb": "^3.682.0",
     "@faker-js/faker": "^9.1.0",
     "@types/aws-lambda": "^8.10.145",
     "aws-lambda": "^1.0.7",
